<resources>
        <string name="app_name">Calculadora</string>
        <string name="embranco"></string>
        <string name="valor_1">Valor 1</string>
        <string name="valor_2">Valor 2</string>
        <string name="somar">Somar</string>
        <string name="subtrair">Subtrair</string>
        <string name="dividir">Dividir</string>
        <string name="multiplicar">Multiplicar</string>
</resources>