<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtResult"
        android:layout_width="356dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="352dp"
        android:ems="10"
        android:hint="@string/embranco"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnMultiplication"
        android:layout_width="169dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="288dp"
        android:text="@string/multiplicar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDivision"
        android:layout_width="169dp"
        android:layout_height="50dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="288dp"
        android:text="@string/dividir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSubtraction"
        android:layout_width="169dp"
        android:layout_height="50dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="232dp"
        android:text="@string/subtrair"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtValue2"
        android:layout_width="348dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="164dp"
        android:ems="10"
        android:hint="@string/embranco"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/valor_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.203" />

    <TextView
        android:id="@+id/txtViewValue2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/valor_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113" />

    <EditText
        android:id="@+id/txtValue1"
        android:layout_width="347dp"
        android:layout_height="53dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/embranco"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnSum"
        android:layout_width="169dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="232dp"
        android:text="@string/somar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>